--- a/0010Lab.ipynb
+++ b/0010Lab.ipynb
@@ -14,7 +14,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "age = input(\"Please enter your age.\")"
+   ]
   }
  ],
  "metadata": {
